--- a/public/index.html
+++ b/public/index.html
@@ -795,5 +795,10 @@
             }
         });
     </script>
+    <footer style="text-align:center; margin-top:20px;">
+  <a href="about.html">About Us</a> | 
+  <a href="privacy.html">Privacy Policy</a> | 
+  <a href="contact.html">Contact Us</a>
+    </footer>
 </body>
 </html>
