--- a/public/privacy.html
+++ b/public/privacy.html
@@ -1,12 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Privacy Policy - SHABAN-MD</title>
+  <meta name="description" content="Privacy Policy for SHABAN-MD covering data, cookies, Google AdSense, GDPR/CCPA rights, and contact details." />
+  <style>
+    :root{
+      --brand:#01411C;
+      --brand-2:#028a3d;
+      --ink:#1f2a2e;
+      --muted:#5b6b73;
+      --bg:#f4f7f8;
+      --card:#ffffff;
+      --border:#e6ecf0;
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0}
+    body{
+      font-family: "Segoe UI", Roboto, Arial, sans-serif;
+      background: linear-gradient(135deg, var(--brand), var(--brand-2));
+      color: var(--ink);
+    }
+    .wrap{
+      max-width: 950px;
+      margin: 40px auto;
+      padding: 0 16px;
+    }
+    .card{
+      background: var(--card);
+      border-radius: 16px;
+      box-shadow: 0 20px 45px rgba(0,0,0,.18);
+      overflow: hidden;
+      border: 1px solid var(--border);
+      animation: fadeIn .7s ease both;
+    }
+    .hero{
+      padding: 38px 28px;
+      background: linear-gradient(135deg, #ffffff, #f8fffb);
+      border-bottom: 1px solid var(--border);
+    }
+    .title{
+      margin: 0 0 6px;
+      font-size: 2rem;
+      color: var(--brand);
+      letter-spacing:.2px;
+    }
+    .sub{
+      margin: 0;
+      color: var(--muted);
+      font-size:.95rem;
+    }
+    .content{
+      padding: 28px;
+      line-height: 1.75;
+      background: var(--card);
+    }
+    h2{
+      margin: 28px 0 10px;
+      color: var(--brand);
+      font-size: 1.35rem;
+    }
+    h3{
+      margin: 22px 0 8px;
+      color: #0f5132;
+      font-size: 1.05rem;
+    }
+    p{margin:10px 0}
+    ul{margin:10px 0 10px 18px}
+    li{margin:6px 0}
+    .note{
+      background:#f0fff4;
+      border:1px solid #c7f0d2;
+      padding:14px 16px;
+      border-radius:12px;
+      color:#0f5132;
+      font-size:.95rem;
+    }
+    .cta{
+      display:flex; gap:10px; flex-wrap:wrap; margin-top:22px
+    }
+    .btn{
+      text-decoration:none;
+      padding:10px 16px;
+      border-radius:10px;
+      border:1px solid var(--border);
+      background:#ffffff;
+      color: var(--brand);
+      font-weight:600;
+      transition:.2s;
+    }
+    .btn:hover{transform: translateY(-2px); box-shadow:0 8px 18px rgba(0,0,0,.10)}
+    footer{
+      text-align:center; color:#eaf7ef; font-size:.95rem; margin:18px 0 30px;
+    }
+    footer a{color:#ffffff; text-decoration:none; border-bottom:1px dashed rgba(255,255,255,.6)}
+    footer a:hover{opacity:.9}
+    @keyframes fadeIn{from{opacity:0; transform: translateY(8px)} to{opacity:1; transform: translateY(0)}}
+    /* Mobile */
+    @media (max-width:640px){
+      .hero{padding:26px 20px}
+      .content{padding:20px}
+      .title{font-size:1.6rem}
+    }
+  </style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p>We respect your privacy. Our website uses Google AdSense which may collect cookies to show personalized ads. 
-  We do not share or sell any personal information of our users.</p>
+  <div class="wrap">
+    <div class="card">
+      <section class="hero">
+        <h1 class="title">Privacy Policy</h1>
+        <p class="sub">
+          Last updated: <strong>September 26, 2025</strong> · Applies to SHABAN-MD and any associated pages.
+        </p>
+        <div class="cta">
+          <a class="btn" href="index.html">← Back to Home</a>
+          <a class="btn" href="contact.html">Contact Us</a>
+        </div>
+      </section>
+
+      <section class="content">
+        <div class="note">
+          This Privacy Policy explains how <strong>SHABAN-MD</strong> (“we”, “us”, “our”) handles information, including the use of cookies and advertising identifiers for showing ads and improving your experience.
+        </div>
+
+        <h2>1) Information We Collect</h2>
+        <p>We do not directly collect personally identifiable information unless you voluntarily submit it (e.g., via the contact form or email). However, we use third-party services (such as Google AdSense) that may collect certain data automatically through cookies or similar technologies, including:</p>
+        <ul>
+          <li>IP address, device and browser information</li>
+          <li>Approximate location (country/region)</li>
+          <li>Pages viewed, referring/exit pages, and engagement metrics</li>
+          <li>Advertising identifiers and interests for ad personalization (where permitted)</li>
+        </ul>
+
+        <h2>2) Cookies & Similar Technologies</h2>
+        <p>Cookies are small files placed on your device to operate the site, measure performance, and personalize content/ads. You can control cookies in your browser settings (block, delete, or limit them). Disabling cookies may affect some features.</p>
+
+        <h2>3) Google AdSense & Advertising</h2>
+        <p>We display ads via <strong>Google AdSense</strong>. Google and its partners may use cookies to serve ads based on your prior visits to this and/or other websites. Google may use the <strong>DART cookie</strong> to show ads based on your interests. You can opt out of personalized advertising by visiting:</p>
+        <ul>
+          <li>Google Ads Settings: <a href="https://adssettings.google.com/" target="_blank" rel="noopener">adssettings.google.com</a></li>
+          <li>About Ads (opt-out for many providers): <a href="https://www.aboutads.info/choices/" target="_blank" rel="noopener">aboutads.info/choices</a></li>
+        </ul>
+        <p>Where required (e.g., EEA/UK/CH), we show a consent banner using a Google-certified CMP to collect and store your ad consent choices. Non-personalized ads may be shown to users who do not consent.</p>
+
+        <h2>4) Legal Bases & User Rights (GDPR/EEA/UK)</h2>
+        <p>If you are in the EEA/UK, our processing may rely on consent (e.g., personalized ads) and legitimate interests (site security, fraud prevention). You may have the right to access, rectify, erase, or restrict processing of your personal data, and to withdraw consent at any time. To exercise rights, contact us using the details below.</p>
+
+        <h2>5) CCPA/CPRA (California Residents)</h2>
+        <p>We do not sell personal information for money. Some ad partners may process identifiers that could be considered “sharing” for cross-context behavioral advertising. California residents can request disclosure/deletion of collected data and may opt out of “sharing” via the Google links above or via browser ad settings.</p>
+
+        <h2>6) Data Retention</h2>
+        <p>We retain voluntarily provided information (e.g., emails you send us) as long as needed to respond and maintain records. Third-party services (like Google) may retain aggregated or pseudonymized data per their own policies.</p>
+
+        <h2>7) Security</h2>
+        <p>We use reasonable administrative and technical measures to help protect information. However, no method of transmission or storage is 100% secure.</p>
+
+        <h2>8) Children’s Privacy</h2>
+        <p>Our content is intended for a general audience and is not directed to children under 13. We do not knowingly collect personal information from children. If you believe a child has provided us information, please contact us so we can delete it.</p>
+
+        <h2>9) Third-Party Links</h2>
+        <p>Our site may contain links to third-party websites/apps. We are not responsible for their content or privacy practices. Please review their policies.</p>
+
+        <h2>10) Changes to this Policy</h2>
+        <p>We may update this Privacy Policy from time to time. The “Last updated” date above shows the latest version. Continued use of the site after changes means you accept the revised policy.</p>
+
+        <h2>11) Contact Us</h2>
+        <p>If you have any questions or requests regarding this Privacy Policy or your data, reach us at:</p>
+        <ul>
+          <li>Email: <a href="mailto:shabansahibzada2@gmail.com">shabansahibzada2@gmail.com</a></li>
+          <li>Contact Page: <a href="contact.html">contact.html</a></li>
+          <li>WhatsApp: <a href="https://wa.me/message/KDRMVBP7DJW3J1" target="_blank" rel="noopener">Open WhatsApp Chat</a></li>
+        </ul>
+
+        <div class="note" style="margin-top:18px;">
+          Tip: If you’re in the EEA/UK/CH, you’ll see our consent banner before personalized ads load. You can revisit your choices anytime from the banner’s “Manage options”.
+        </div>
+      </section>
+    </div>
+
+    <footer>
+      <span>© <script>document.write(new Date().getFullYear())</script> SHABAN-MD • <a href="index.html">Home</a> • <a href="contact.html">Contact</a></span>
+    </footer>
+  </div>
 </body>
 </html>
