--- a/public/index.html
+++ b/public/index.html
@@ -795,10 +795,11 @@
             }
         });
     </script>
-    <footer style="text-align:center; margin-top:20px;">
+ <footer style="text-align:center; margin-top:20px;">
   <a href="about.html">About Us</a> | 
   <a href="privacy.html">Privacy Policy</a> | 
-  <a href="contact.html">Contact Us</a>
-    </footer>
+  <a href="contact.html">Contact Us</a> | 
+  <a href="terms.html">Terms & Conditions</a>
+</footer>
 </body>
 </html>
